# advent_of_code_2025

./: Cargo.toml
inputs/: 11.txt  11test2.txt  5.txt  7.txt  9.txt
src/: main.rs
