[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "day_1"
path = "src/bin/day1.rs"

[[bin]]
name = "day_2"
path = "src/bin/day2.rs"

[[bin]]
name = "day_3"
path = "src/bin/day3.rs"

[[bin]]
name = "day_4"
path = "src/bin/day4.rs"

[[bin]]
name = "day_5"
path = "src/bin/day5.rs"

[[bin]]
name = "day_6"
path = "src/bin/day6.rs"

[[bin]]
name = "day_7"
path = "src/bin/day7.rs"

[[bin]]
name = "day_8"
path = "src/bin/day8.rs"

[[bin]]
name = "day_9"
path = "src/bin/day9.rs"

[[bin]]
name = "day_10"
path = "src/bin/day10.rs"

[[bin]]
name = "day_11"
path = "src/bin/day11.rs"
